# health_backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 5ac914408637_add_user_model.py
src/auth/: __init__.py
src/auth/adapter/: __init__.py  repository.py
src/auth/adapter/api/: dependencies.py  models.py  routes.py
src/auth/domain/: __init__.py  events.py  models.py  service.py
src/auth/service_layer/: __init__.py  auth.py  uow.py
src/common/: __init__.py  domain.py  repository.py  service_layer.py  sql.py  unit_of_work.py
src/health/: __main__.py  app.py  config.py  generate_schema.py  logger.py  run.py
